Fix product page on mobile

--- a/resources/css/product.css
+++ b/resources/css/product.css
@@ -11,7 +11,7 @@ main {
     border-block-end: 1px solid var(--color-alt);
 }
 
-@media (aspect-ratio <= 2 / 3) {
+@media (width <= 48rem) {
     .main-product {
         flex-direction: column;
         height: fit-content;
@@ -89,8 +89,6 @@ main {
     display: flex;
     align-items: center;
     gap: 0.5rem;
-
-    border-block-end: 1px solid var(--color-alt);
 }
 
 .cart-btn {
